    -com.vividsolutions.jump.workbench.ui.renderer.LineStringSelectionRenderer
    -com.vividsolutions.jump.workbench.ui.renderer.SelectionBackgroundRenderer
    -com.vividsolutions.jump.workbench.ui.cursortool.SelectTool
    -com.vividsolutions.jump.workbench.ui.plugin.clipboard.CollectionOfFeaturesTransferable
    -com.vividsolutions.jump.workbench.ui.plugin.DeleteSelectedItemsPlugIn
    

2011-09-18 mmichaud <michael.michaud@free.fr>
  * Refactoring of EditTransaction class :
    - use Set instead of List to avoid time-consuming "if (!list.contains())" 
      operations
    - remove geometry cloning in addFeature and deleteFeature : save time and 
      memory. Hopefully, it will not break anything
    All in all, the speed improvement maybe 10x and the memory save 50%
    Change may slow down some operations, but I did not note it yet. 

2011-09-14 ede
  * throw image loading errors up to calling code
  * ReferencedImageFactoryFileLayerLoader does not create 
     empty layers if image loading failed anymore
  * OpenFileWizard now displays errors properly even when 
     the taskmonitor closes early
  * bugfix 3084927:
      ecw libraries choke on accented and other non ascii chars in loading path
      ECWImageFactory now checks if loading path is ascii only
       and throws a describing error if not

2011-09-11 ede
  * reworked about dialog
     now vertically resizable
     about tab displays scrollable oj_home/readme.txt now

2011-09-10 mmichaud <michael.michaud@free.fr>
    * Remove MultiInputDialogWithoutCancel, prepare 1.4.2 release
    
2011-09-09 mmichaud <michael.michaud@free.fr>
    * Language files improvements (it and es)
    
2011-09-08 mmichaud <michael.michaud@free.fr>
    * Try to fix bug 3404539 (borders with increasing width in statud bar)
      with workaround described in sun java database - bug 4131528
      (does not work with all look and feel)

2011-09-06 ede
    * added Geometry Converter Plugin to ojcore, available under